--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,18 @@ img {
 
 }
 
+.trashButton:hover {
+ 
+  color: #902DF6;
+
+}
+
+.contact {
+  font-family: 'Open Sans';
+  padding: 4px;
+  font-size: 20px;
+}
+
 .bio h1 {
 
   font-family: 'Lobster';
