--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@ img {
   object-fit: cover;
 }
 
-.lander {
-  background-image: none;
-}
+
 .profile {
   border-radius: 50%;
 }
+
+
 .arrow-down {
   width: 0;
   height: 0;
@@ -51,6 +51,8 @@ img {
   font-size: 20px;
 }
 
+
+
 .bioname {
   color: #902df6;
   display: inline-block;
@@ -89,6 +91,9 @@ img {
 }
 body {
   background-color: #f1eaf3;
+
+  width: 100%;
+  height: 100%;
   
 }
 
